# Cursor.Chat-History

./: .gitignore  Makefile  README.org  cursor_chat_history.py  cursor_style_prompts.org  export_cursor_chat_history_to_md.py  pyproject.toml  timestamp_implementation_plan.org
chat_history_exports/: cursor_chat_history_20250416_165646.md
tests/: run_tests.py  state_example.vscdb  test_cursor_chat_history.py
