[project]
name = "cursor_chat_history"
version = "0.1.0"
description = "Tools for exporting and managing Cursor AI chat history."
authors = [
    { name = "Roy Mathew", email = "rmathew8@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "duckdb",
    "ruff"
]

[tool.uv]
# uv-specific configuration can go here if needed

[tool.setuptools.packages.find]
where = ["."]
include = ["cursor_chat_history*"]
exclude = ["chat_history_exports*"]
